--- a/tests/SASloghooktest.html
+++ b/tests/SASloghooktest.html
@@ -127,9 +127,10 @@ $(document).ready(function () {
 <h2>An Output Hook for PROC PRINTTO</h2>
 <p>In this example I am using the PROC PRINTTO method of capturing the log. In this approach, we use SAS code to save a log file. In a separate code chunk we use R code to read this log file and place it in our document.</p>
 <p>In addition to the usual set up code for working with SAS (the &quot;sas&quot; or &quot;sashtml&quot; engines), we need to define an <em>output</em> hook.</p>
-<pre class="r"><code>  # require(SASmarkdown)
-  hook_orig &lt;- knitr::knit_hooks$get(&quot;output&quot;)
-  knitr::knit_hooks$set(output = SASmarkdown::sasloghook)</code></pre>
+<pre class="r"><code>  require(SASmarkdown)
+  # hook_orig &lt;- knitr::knit_hooks$get(&quot;output&quot;)
+  # knitr::knit_hooks$set(output = SASmarkdown::sasloghook)
+  saslog_hookset(&quot;output&quot;)</code></pre>
 <p>Note that <strong>all</strong> R output is run through the output hook, but our alterations are specific to the SAS log (none of the things we are searching for and removing appear in R output), so SAS output is untouched.</p>
 <pre class="sas"><code>proc printto log=&quot;saslog.log&quot; new;
 proc means data=sashelp.class;
@@ -155,8 +156,8 @@ run;</code></pre>
 NOTE: There were 19 observations read from the data set SASHELP.CLASS.
 NOTE: The PROCEDURE MEANS printed page 1.
 NOTE: PROCEDURE MEANS used (Total process time):
-      real time           0.04 seconds
-      cpu time            0.01 seconds
+      real time           0.09 seconds
+      cpu time            0.04 seconds
       </code></pre>
 <p>Some variations. No processing times, SASproctime=FALSE.</p>
 <pre><code>3          proc means data=sashelp.class;
@@ -175,8 +176,8 @@ NOTE: The PROCEDURE MEANS printed page 1.
 NOTE: There were 19 observations read from the data set SASHELP.CLASS.
 NOTE: The PROCEDURE MEANS printed page 1.
 NOTE: PROCEDURE MEANS used (Total process time):
-      real time           0.04 seconds
-      cpu time            0.01 seconds
+      real time           0.09 seconds
+      cpu time            0.04 seconds
       </code></pre>
 <p>Some variations. No SAS NOTES, SASnotes=FALSE.</p>
 <pre><code>      real time           0.00 seconds
@@ -186,8 +187,8 @@ NOTE: PROCEDURE MEANS used (Total process time):
 3          proc means data=sashelp.class;
 4          run;
 
-      real time           0.04 seconds
-      cpu time            0.01 seconds
+      real time           0.09 seconds
+      cpu time            0.04 seconds
       </code></pre>
 <p>Clean up.</p>
 <pre class="r"><code># Do not forget to remove the log file when you are done!
@@ -196,16 +197,14 @@ unlink(&quot;saslog.log&quot;)</code></pre>
 <div id="a-source-hook-for-the-saslog-engine" class="section level2">
 <h2>A Source Hook for the &quot;saslog&quot; Engine</h2>
 <p>with the &quot;saslog&quot; engine, we would need to use the same function as a <em>source</em> hook. Again, the usual SAS set up is needed, including setting up the engine.</p>
-<pre class="r"><code>require(SASmarkdown)</code></pre>
-<pre><code>Loading required package: SASmarkdown</code></pre>
-<pre class="r"><code>sas_enginesetup(saslog=saslog)</code></pre>
+<pre class="r"><code>require(SASmarkdown)
+sas_enginesetup(saslog=saslog)</code></pre>
 <div id="hook-specification" class="section level3">
 <h3>Hook Specification</h3>
 <p>Next we redefine how &quot;source&quot; is displayed. (Notice we reset the &quot;output&quot; hook, from above.)</p>
 <pre class="r"><code>knitr::knit_hooks$set(output=hook_orig)
 
-hook_orig &lt;- knitr::knit_hooks$get(&quot;source&quot;)
-knitr::knit_hooks$set(source = sasloghook)</code></pre>
+saslog_hookset(&quot;source&quot;)</code></pre>
 </div>
 <div id="hook-use" class="section level3">
 <h3>Hook Use</h3>
@@ -219,8 +218,8 @@ run;</code></pre>
 NOTE: There were 19 observations read from the data set SASHELP.CLASS.
 NOTE: The PROCEDURE MEANS printed page 1.
 NOTE: PROCEDURE MEANS used (Total process time):
-      real time           0.03 seconds
-      cpu time            0.04 seconds
+      real time           0.10 seconds
+      cpu time            0.09 seconds
       
 </code></pre>
 <pre><code> 
@@ -247,7 +246,7 @@ NOTE: The PROCEDURE MEANS printed page 1.
 <h3>Interactions (or Lack Thereof)</h3>
 <p>Chunks in other languages are unaffected.</p>
 <pre class="r"><code>runif(5)</code></pre>
-<pre><code>[1] 0.5705492 0.5269281 0.5855832 0.4438775 0.8808663</code></pre>
+<pre><code>[1] 0.71621019 0.07626281 0.65113694 0.08983751 0.26819626</code></pre>
 <p>and, with the &quot;sas&quot; engine.</p>
 <pre class="sas"><code>proc means data=sashelp.class;
 run;</code></pre>
