Work on SAS comments

--- a/inst/examples/sas-spin2.html
+++ b/inst/examples/sas-spin2.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title></title>
+<title>Special Markup</title>
 
 <script type="text/javascript">
 window.onload = function() {
@@ -204,7 +204,16 @@ hr {
 <p>This is a special SAS script which can be used to generate a report.
   You can write normal text in command-style comments.</p>
 
-<p>First we specify a path for SAS and set up some options.</p>
+<h3>Special Markup</h3>
+
+<ul>
+<li>&ldquo;** &rdquo;, a double asterisk, signals the beginning of document text.  End with a semi-colon.</li>
+<li>&ldquo;*+ &rdquo;, an asterisk-plus, signals the beginning of a code chunk, and
+specifies the code chunk options.  End with a semi-colon.</li>
+<li><p>&ldquo;*R &rdquo;, an asterisk-R, signals the enclosed code is in R.  End with a semi-colon.</p>
+
+<p>In order to run SAS code, first we specify a path for SAS and set up some options in R.</p></li>
+</ul>
 
 <pre><code class="r"># An R comment
 require(SASmarkdown)
@@ -219,19 +228,21 @@ sasopts &lt;- &#39;-nosplash -ls 75&#39;
 <p>The report begins here.</p>
 
 <pre><code class="sas">
-** A SAS comment;
-proc means data=sashelp.class (keep = age);
+* A SAS comment;
+proc means data=sashelp.class /*(keep = age)*/;
 run;
+
+;
 </code></pre>
 
 <pre><code>                            The MEANS Procedure
 
-                         Analysis Variable : Age 
-
-     N            Mean         Std Dev         Minimum         Maximum
-    ------------------------------------------------------------------
-    19      13.3157895       1.4926722      11.0000000      16.0000000
-    ------------------------------------------------------------------
+ Variable    N           Mean        Std Dev        Minimum        Maximum
+ -------------------------------------------------------------------------
+ Age        19     13.3157895      1.4926722     11.0000000     16.0000000
+ Height     19     62.3368421      5.1270752     51.3000000     72.0000000
+ Weight     19    100.0263158     22.7739335     50.5000000    150.0000000
+ -------------------------------------------------------------------------
 </code></pre>
 
 <p>You can use the <strong><em>usual</em></strong> Markdown.</p>
