Enable text input to spinsas

--- a/inst/examples/sas-spin1.html
+++ b/inst/examples/sas-spin1.html
@@ -217,8 +217,7 @@ sasopts &lt;- &#39;-nosplash -ls 75&#39;
 
 <p>The report begins here.</p>
 
-<pre><code class="sas">
-proc means data=sashelp.class (keep = age);
+<pre><code class="sas">proc means data=sashelp.class (keep = age);
 run;
 </code></pre>
 
