--- a/inst/examples/sas-spin2.html
+++ b/inst/examples/sas-spin2.html
@@ -244,8 +244,8 @@ proc means data=sashelp.class /*(keep = age)*/;
 run;
 
 /* lines here are
-ignored by SAS.  At the end of
-your SAS code they must be followed by a semi-colon.
+ignored by SAS.  If at the end of
+your SAS code chunk they must be followed by a semi-colon.
 */
 ;
 </code></pre>
